[metadata]
name = aw
version = 0.0.6
url = https://github.com/t-c-w/aw
platforms = any
description_file = README.md
description = Machine learning utils
author = Thor Whalen
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = aw

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

